gccida/c1/find_reloads_address
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads_address/src/reload.c:5033:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads_address/src/reload.c:5038:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type type, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads_address/src/reload.c:5032:10: error: conflicting types for 'find_reloads_address'
__int64  find_reloads_address( 
         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads_address/src/reload.c:260:12: note: previous declaration is here
static int find_reloads_address PARAMS ((enum machine_mode, rtx *, rtx, rtx *,
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads_address/src/reload.c:5042:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v12; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads_address/src/reload.c:5045:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v15; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads_address/src/reload.c:5054:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v24; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads_address/src/reload.c:5055:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v25; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads_address/src/reload.c:5060:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v30; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads_address/src/reload.c:5061:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v31; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads_address/src/reload.c:5062:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v32; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads_address/src/reload.c:5084:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v54; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads_address/src/reload.c:5093:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v64; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads_address/src/reload.c:5098:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v69[2]; // [rsp+8h] [rbp-40h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads_address/src/reload.c:5110:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v19.rtwint = ( __int64)ad->fld[0]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads_address/src/reload.c:5148:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)ad + 2), 
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads_address/src/reload.c:5180:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)x + 2), 
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads_address/src/reload.c:5192:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v37.rtwint = ( __int64)ad->fld[0]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads_address/src/reload.c:5204:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v46.rtwint = ( __int64)ad->fld[0]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads_address/src/reload.c:5219:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)v66 + 2), 
  ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reloads_address/src/obj/reload.o] Error 1
